# HFuse

./: .gitignore  .gitmodules  .yo-rc.json  CMakeLists.txt  Dockerfile  LICENSE  MaxPoolForward_batch_norm_collect_statistics_kernel_.inc  MaxPoolForward_upsample_bilinear2d_out_frame_.inc  README.md  im2col_kernel_MaxPoolForward_.inc  im2col_kernel_batch_norm_collect_statistics_kernel_.inc  im2col_kernel_kernelHistogram1D_.inc  im2col_kernel_upsample_bilinear2d_out_frame_.inc  kernelHistogram1D_MaxPoolForward_.inc  kernelHistogram1D_batch_norm_collect_statistics_kernel_.inc  kernelHistogram1D_upsample_bilinear2d_out_frame_.inc  upsample_bilinear2d_out_frame_batch_norm_collect_statistics_kernel_.inc
configs/: blake_sha256.yaml  blake_sia.yaml  crypt_four.yaml  crypto_fusion.yaml  crypto_kernels.yaml  ethash_blake.yaml  ethash_sha256.yaml  ethash_sia.yaml  im2col_maxpool.yaml  im2col_maxpool_norm.yaml  im2col_norm.yaml  im2col_summary.yaml  im2col_upsample.yaml  maxpool_norm.yaml  maxpool_summary_norm.yaml  maxpool_upsample.yaml  ml_fusion.yaml  ml_kernels.yaml  sha256_sia.yaml  summary_maxpool.yaml  summary_norm.yaml  summary_upsample.yaml  test.yaml  upsample_norm.yaml
examples/crypt/: CMakeLists.txt
examples/crypt/ccminer/: blake2b.cu  cuda_helper.h
examples/crypt/ccminer/sha256/: cuda_sha256d.cu
examples/crypt/fuse/: CMakeLists.txt  main.cc
examples/crypt/libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  blake_sha256.cu  blake_sia.cu  cuda_helper.h  eth_blake.cu  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h  ethash_cuda_miner_kernel_globals.h  ethash_sha256.cu  ethash_sia.cu  four.cu  sha256_sia.cu
examples/crypt/libethcore/: CMakeLists.txt
examples/ml/: build.sh  call.py  setup.py
examples/ml/cuda/: DilatedMaxPool2d.cu  Im2Col.cu  Normalization.cu  Normalization.cuh  UpSample.cuh  UpSampleBilinear2d.cu  im2col.cuh
examples/ml/fused/: Dropout.cu  Im2ColHist.cu  Im2ColHist.cuh  Im2ColMaxPool.cu  Im2ColMaxPool.cuh  Im2ColMaxpoolNorm.cu  Im2ColMaxpoolNorm.cuh  Im2ColNormalization.cu  Im2ColNormalization.cuh  Im2ColUpSample.cu  Im2ColUpSample.cuh  MaxPoolBatchNorm.cu  MaxPoolBatchNorm.cuh  MaxPoolUpSample.cu  MaxpoolSummaryNorm.cu  SoftMax.cu  SoftMaxNomalization.cuh  SummaryMaxpool.cu  SummaryNorm.cu  SummaryNorm.cu.bak  SummaryNorm.cuh  SummaryOps.cu  SummaryUpsample.cu  UpsampleNormalization.cu  UpsampleNormalization.cuh
examples/ml/wrappers/: wrapper.cpp
include/: BarrierAnalyzer.h  BarrierHoisting.h  BarrierRewriter.h  DeclRewriter.h  KernelFuseTool.h  KernelFusion.h  KernelPrinter.h  KernelRecursiveFuser.h  MacroExpand.h  ParameterCollector.h  ThreadInfoRewriter.h
include/KernelFuser/: BarrierHoisting.h  BarrierRewriter.h  DeclRewriter.h  KernelFuseTool.h  KernelFusion.h  KernelRecursiveFuser.h  MacroExpand.h  ParameterCollector.h
include/TorchKernels/: LaunchParams.h  Utils.h
lib/: CMakeLists.txt
lib/KernelFuser/: BarrierAnalyzer.cpp  BarrierHoisting.cpp  BarrierRewriter.cpp  CMakeLists.txt  DeclRewriter.cpp  KernelFuseTool.cpp  KernelFusion.cpp  KernelPrinter.cpp  KernelRecursiveFuser.cpp  MacroExpand.cpp  ParameterCollector.cpp  ThreadInfoMatcher.cpp  ThreadInfoRewriter.cpp
lib/Torch/: CMakeLists.txt  max_pool_batch_norm_fused.cpp  max_pool_batch_norm_fused.h
lib/TorchKernels/: CMakeLists.txt  MaxPoolBatchNormFused.cu
scripts/: analyze_nvprof.py  profile_and_collect_data.py
scripts/configs/: hist_norm.json
scripts/data/: barsync-event.csv  barsync-metrics.csv  barsync-spill-event.csv  barsync-spill-metrics.csv  ethminer_event.csv  ethminer_metrics.csv  ethminer_spill_event.csv  ethminer_spill_metrics.csv  miner-regcap-volta.json  miner-volta.json  miner.json  miner_regcap.json  ml-event.csv  ml-metrics.csv  ml-naive-event.csv  ml-naive-metric.csv  ml-naive.json  ml-regcap-volta.json  ml-regcap.json  ml-spill-event.csv  ml-spill-metrics.csv  ml-volta.json  ml.json  ml_event.csv  ml_metrics.csv  ml_regcap.json  ml_spill_event.csv  ml_spill_metrics.csv  noregcap-barsync.json  regcap-barsync.json  regcap_ml.csv
scripts/data-new/: .gitattributes
scripts/docker/: Dockerfile
tools/: CMakeLists.txt
tools/llvm-smart-fuser/: CMakeLists.txt  main.cpp
